[project]
name = "jmullan.git"
version = "1.0.0"
description = "Produce a CHANGELOG from your git log."
authors = [
    {name = "Jesse Mullan", email="jmullan@gmail.com"}
]
classifiers = [
    "Topic :: Software Development",
    "Intended Audience :: Developers"
]
readme = "README.md"
requires-python = ">=3.13"
keywords = ["git"]
dependencies = [
    "jmullan.logging@git+https://github.com/jmullan/jmullan.logging",
    "jmullan.cmd@git+https://github.com/jmullan/jmullan.cmd",
    "pygit2"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "mypy",
    "pip",
    "pytest",
    "ruff"
]

[project.urls]
homepage = "https://github.com/jmullan/jmullan.git_helpers"
documentation = "https://github.com/jmullan/jmullan.git_helpers"
repository = "https://github.com/jmullan/jmullan.git_helpers"

[project.scripts]
git-main = "jmullan.git.git_main:main"
git-wip = "jmullan.git.git_wip:main"

[build-system]
requires = [
    "hatchling"
]
build-backend = "hatchling.build"

[tool.mypy]
namespace_packages = "true"
mypy_path = "src"
python_version = "3.11"
ignore_missing_imports = true
enable_error_code = [
    "ignore-without-code"
]
warn_return_any = true
warn_unused_configs = true

[tool.hatch.build.targets.wheel]
packages = ["src/jmullan"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
lint.select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  # "D",   # pydocstyle
  "I",   # isort
]


[tool.ruff.lint.isort]
known-first-party = ["jmullan.git"]
known-local-folder = ["src"]
section-order = ["future", "standard-library", "third-party", "internal", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
internal = ["jmullan"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80
