[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jmullan.git"
version = "1.0.0"
description = "Produce a CHANGELOG from your git log."
authors = [
    {name = "Jesse Mullan", email="jmullan@gmail.com"}
]
classifiers = [
    "Topic :: Software Development",
    "Intended Audience :: Developers"
]
readme = "README.md"
requires-python = ">=3.13"
keywords = ["git"]
dependencies = [
    "jmullan.logging@git+https://github.com/jmullan/jmullan.logging",
    "jmullan.cmd@git+https://github.com/jmullan/jmullan.cmd",
    "pygit2"
]

[project.optional-dependencies]
all = ["jmullan.git[test,dev,build]"]
test = [
    "coverage[toml]",
    "pytest",
    "pytest-cov",
    "pytest-mock",
]
dev = [
    "mdformat",
    "pre-commit",
    "mypy",
    "ruff"
]
build = [
    "hatch",
    "pip",
    "uv"
]

[project.urls]
homepage = "https://github.com/jmullan/jmullan.git_helpers"
documentation = "https://github.com/jmullan/jmullan.git_helpers"
repository = "https://github.com/jmullan/jmullan.git_helpers"


[tool.hatch.build.targets.wheel]
packages = ["src/jmullan"]
sources = ["src"]
only-include = ["src/jmullan/git"]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true
allow-implicit-namespace-packages = true


[project.scripts]
gecos = "jmullan.git.gecos:main"
git-main = "jmullan.git.git_main:main"
git-wip = "jmullan.git.git_wip:main"
git-ahead = "jmullan.git.git_ahead:main"
git-behind = "jmullan.git.git_behind:main"
git-branches = "jmullan.git.git_branches:main"
git-catchup = "jmullan.git.git_catchup:main"
git-changes = "jmullan.git.git_changes:main"
git-defunct-remotes = "jmullan.git.git_defunct-remotes:main"
git-diff-graph = "jmullan.git.git_diff_graph:main"
git-exclude = "jmullan.git.git_exclude:main"
git-from = "jmullan.git.git_from:main"
git-logdiff = "jmullan.git.git_logdiff:main"
git-names = "jmullan.git.git_names:main"
git-rebasing = "jmullan.git.git_rebasing:main"
git-sanity = "jmullan.git.git_sanity:main"
git-smash = "jmullan.git.git_smash:main"
git-stats = "jmullan.git.git_stats:main"
git-step = "jmullan.git.git_step:main"
git-timecard = "jmullan.git.git_timecard:main"
git-track = "jmullan.git.git_track:main"



[tool.coverage.run]
source_pkgs = ["jmullan.git", "tests"]
branch = true
parallel = true
omit = []

[tool.coverage.paths]
jmullan.chat = ["src/jmullan/git"]
tests = ["tests", "*/jmullan/git/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
namespace_packages = "true"
explicit_package_bases = true
mypy_path = "src:tests"
python_version = "3.13"
ignore_missing_imports = true
enable_error_code = [
    "ignore-without-code"
]
warn_return_any = true
warn_unused_configs = true
# files = ["src", "tests"]

[tool.ruff]
line-length = 120
lint.select = [
    "ALL"
]
lint.ignore = [
    "ANN002",  # Missing type annotation for `*args`
    "ANN003",  # Missing type annotation for `**kwargs`
    "ANN204", # Missing return type annotation for special method `__init__`
    "BLE001",  # Do not catch blind exception: `Exception`
    "COM812",  # missing-trailing-comma
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in `__init__`
    "D203",  # `incorrect-blank-line-before-class`
    "D213",  # `multi-line-summary-second-line`
    "EM101",  # Exception must not use a string literal, assign to variable first
    "SIM108",  # Use ternary operator instead of `if`-`else`-block
    "TRY003",  # Avoid specifying long messages outside the exception class
]

# Only ignore variables named "_".
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?)|args|kwargs)$"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN",     # Missing type annotations
    "ARG",     # Unused function args -> fixtures nevertheless are functionally relevant...
    "D",       # Missing docstrings
    "D103",    # Missing docstring in public function
    "FBT",     # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "PLR2004", # Magic value used in comparison, ...
    "S101",    # asserts allowed in tests...
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
    "TRY002",  # Create your own exception
    "TRY301",  # Abstract `raise` to an inner function
]

[tool.ruff.lint.flake8-annotations]
# this is supposed to deal with ANN204 for __init__, but doesn't seem to work
mypy-init-return = true


[tool.ruff.lint.isort]
known-first-party = ["jmullan.git"]
known-local-folder = ["src"]
section-order = ["future", "standard-library", "third-party", "internal", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
internal = ["jmullan"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules -p no:logging --import-mode=importlib"
consider_namespace_packages = true
